Fix portal compass and forge rendering